# MGKTL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CheckCompiler.cmake  CompileOptions.cmake  Sanitize.cmake
src/: CMakeLists.txt
src/MContainers/: CMakeLists.txt  Treap.hpp  test.cpp
src/MData/: Allocator.hpp  AllocatorConcepts.hpp  BitArray.hpp  BucketArray.hpp  CMakeLists.txt  Pointers.hpp  Vector.hpp  main.cpp
src/MIo/: CMakeLists.txt  print.hpp  stream.cpp  stream.hpp  test.cpp
src/MUtils/: CMakeLists.txt  defines.hpp  function.hpp  utils.hpp
